# all2bpmn

./: .env.example  .gitignore  README.md  all2bpmn.spec  build_exe.ps1  pyproject.toml
docs/: architecture.md  bizagi-integration.md
src/pdf_to_bpmn/: __init__.py  cli.py  config.py  domain.py
src/pdf_to_bpmn/services/: __init__.py  analysis.py  azure_document.py  bizagi_validation.py  bpmn_semantic.py  image_io.py  rasterizer.py  storage.py  visio.py  xpdl.py
src/pdf_to_bpmn/ui/: main_window.py  scene.py  web_modeler.py
src/pdf_to_bpmn/ui/assets/: bpmn_editor.html
