[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-to-bpmn-visio"
version = "0.1.0"
description = "Aplicacion de escritorio para reconstruir BPMN desde PDF y exportar a Visio VSDX."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyMuPDF>=1.26.0",
  "PySide6>=6.7.0",
  "opencv-python>=4.10.0.84",
  "numpy>=1.26.0",
  "requests>=2.32.0",
]

[project.scripts]
pdf2bpmn = "pdf_to_bpmn.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pdf_to_bpmn.ui" = ["assets/*.html"]
